[internal] methods for changing how items are counted in the item list